--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p class="tag">SERIOUSLY I DONT KNOW A SHIT</p>
       <p class="text_column">HEY THERE I JUST CREATED FOR FUN</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="login form.html"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
       <h4>I DONT KNOW A SHIT</h4>
       <p class="tag">HTML, CSS, JS, WordPress</p>
       <p class="text_column">SO IM JUST DOING IT FOR FUN</p>
