--- a/index.html
+++ b/index.html
@@ -1,86 +1,77 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Light Theme</title>
-<link href="css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-<!-- Main Container -->
-<div class="container"> 
-  <!-- Header -->
-  <header class="header">
-    <h4 class="logo">ARUN DAI'S BLOG</h4>
-  </header>
-  <!-- Hero Section -->
-  <section class="intro">
-    <div class="column">
-      <h3>ARUN DAI</h3>
-      <img src="1634888338532.jpg" alt="" class="profile"> </div>
-    <div class="column">
-      <p>hello, this is me Arun. I'm just a simple person <br>
-        who wants to do things right. I particularly have lots of goals but I'm kind of lazy to work on it. May be <br>
-        I should change my habit and work towards my goal.<br>
-        And at last <br>
-        Thank you for visiting my page.<br>
-      Peace. </p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Arun Odari</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="favicon.ico?v=2" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Poppins:wght@300;400;500;600;700&family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="top-container">
+      <img src="images/cloud.png" class="top-cloud" alt="cloud-img" />
+      <h1>I'm Arun.</h1>
+      <h2>a <span class="pro">web</span> developer.</h2>
+      <img src="images/cloud.png" class="bottom-cloud" alt="cloud-img" />
+      <img src="images/mountain.png" alt="mountain-img" />
     </div>
-  </section>
-  <!-- Stats Gallery Section -->
-  <div class="gallery">
-    <div class="thumbnail"> <a href="https://www.youtube.com/watch?v=Soa3gO7tL-c" target="https://www.youtube.com/watch?v=Soa3gO7tL-c"><img src="https://i.ytimg.com/an_webp/Soa3gO7tL-c/mqdefault_6s.webp?du=3000&sqp=CIOkrJEG&rs=AOn4CLBINryJQUWluFKk44Bsjjvia9en-g"/></a>
-      <h4>I DONT KNOW A SHIT ABOUT CREATING </h4>
-      <p class="tag">SERIOUSLY I DONT KNOW A SHIT</p>
-      <p class="text_column">HEY THERE I JUST CREATED FOR FUN</p>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="images/arun.png" alt="" />
+        <h2>Hello.</h2>
+        <p class="intro">
+          <!--  -->
+          I'm a web designer / developer based in Biratnagar, Nepal. I have a
+          passion for web design and love to create for web and mobile devices.
+        </p>
+      </div>
+      <hr />
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="programming-img" src="images/programming.png" alt="" />
+          <h3>Design & Development</h3>
+          <p>
+            I specialize in building responsive, user-friendly websites using
+            HTML, CSS, and JavaScript. My goal is to create websites that not
+            only look great, but also deliver an exceptional user experience.
+            When I'm not coding, you can find me staying up-to-date on the
+            latest web development trends and technologies.
+          </p>
+        </div>
+        <div class="skill-row">
+          <img class="workout-img" src="images/workout.png" alt="" />
+          <h3>Working Out</h3>
+          <p>
+            Eventhough I would like to make workout as my lifestyle. I haven't
+            been able to do it. May be someday, I would make a perfect body.😅😅
+          </p>
+        </div>
+      </div>
+      <hr />
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>If you are interested in coding as much as I do.</h3>
+        <p class="contact-message">
+          Want to be friend with me? Feel free to contact me. We can code doing
+          some stupid guffs.
+        </p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      </div>
     </div>
-    <div class="thumbnail"> <a href="login-form.html"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>I DONT KNOW A SHIT</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">SO IM JUST DOING IT FOR FUN</p>
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class="copyright" >© 2022 Arun Odari.</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>TITLE</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>TITLE</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-  </div>
-  <div class="gallery">
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>TITLE</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>TITLE</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>TITLE</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>TITLE</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-  </div>
-  <!-- Footer Section -->
-  <footer id="contact">
-    <p class="hero_header">GET IN TOUCH WITH ME</p>
-    <div class="button">EMAIL ME </div>
-  </footer>
-  <!-- Copyrights Section -->
-  <div class="copyright">&copy;2022 -<strong>arun's cooperation all right reserved</strong></div>
-</div>
-<!-- Main Container Ends -->
-</body>
+  </body>
 </html>
