--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
     </div>
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/arun-odari-3808501b2
+">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/arun_odari">Twitter</a>
+      <a class="footer-link" href="https://www.arunodari.com.np/">Website</a>
       <p class="copyright" >© 2022 Arun Odari.</p>
     </div>
   </body>
