--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Discover the top schools in Biratnagar with a focus on quality education and excellence. Your School Name strives to provide the best learning environment for students."/>
+    <meta name="keywords" content="top schools, Biratnagar, education, excellence, learning"/>
+    <meta name="geo.region" content="NP" />
+    <meta name="geo.placename" content="Biratnagar" />
+    <meta name="geo.position" content="26.4561; 87.2720" />
+    <meta name="ICBM" content="26.4561, 87.2720" />
+
+
     <title>Arun Odari</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="favicon.ico?v=2" />
